# wave-runtime

./: .gitmodules  Cargo.toml  README.md  build.rs
src/: main.rs
wamr-embed/: CMakeLists.txt  wamr_runtime_wrap.c  wamr_runtime_wrap.h
wamr-embed/wasm-micro-runtime/test-tools/build-wasi-sdk/: build_wasi_sdk.py
